--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -28,11 +28,16 @@ body {
   position: relative;
 
   main {
-    padding: 24px;
     flex-grow: 1;
     display: flex;
     flex-direction: column;
     overflow-y: auto;
+  }
+
+  header {
+    position: static;
+    background-color: #FFFFFF;
+    color: #113458;
   }
 
   .pro-item-content {
